force-app/main/default/objects/Notification_Events__e/Notification_Events__e.object-meta.xml
<CustomObject>
    <description>Platform event emitted when a candidate notification is created.</description>
    <label>Notification Event</label>
    <pluralLabel>Notification Events</pluralLabel>
</CustomObject>