force-app/main/default/objects/Notification_Events__e/fields/Link_To__c.field-meta.xml
<CustomField>
    <fullName>Link_To__c</fullName>
    <label>Link To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>