force-app/main/default/objects/Notification_Events__e/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Notification Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>