force-app/main/default/objects/Notification_Events__e/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>