force-app/main/default/objects/Notification_Events__e/fields/Recipient_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Contact_Id__c</fullName>
    <label>Recipient Contact Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>